Make tests compatible to JDK17.