@@ -146,8 +146,13 @@ test {
     // Allow access to internal methods used by powerMockito
     // Will fail with Java17
     if (!JavaVersion.current().isJava8()) {
+        println 'Allow access to private methods...'
         jvmArgs '--illegal-access=permit'
     }
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+        println 'Allow access to private methods of package java.util.stream...'
+        jvmArgs '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
+   }
     testLogging {
         outputs.upToDateWhen {false}
         showStandardStreams = true
